@@ -5,17 +5,15 @@ import com.brycenkorea.template.entity.Attendance;
 import com.brycenkorea.template.repository.AttendanceRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
+import reactor.core.publisher.Mono;
 
-import java.time.DayOfWeek;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.YearMonth;
+import java.time.*;
 import java.time.format.DateTimeFormatter;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 @Slf4j
@@ -23,100 +21,80 @@ public class AggregationService {
 
     private final AttendanceRepository attendanceRepository;
 
-
-    public AggregationDto getAggregatedDailyDataByDate(String date) {
-        LocalDate parsedDate = LocalDate.parse(date, DateTimeFormatter.ofPattern("yyyy-MM-dd"));
-        DayOfWeek dayOfWeek = parsedDate.getDayOfWeek();
-
+    public Mono<AggregationDto> getAggregatedDailyDataByDate(String date) {
         LocalDateTime startOfDay = getStartOfDay(date);
-        LocalDateTime endOfDay   = getEndOfDay(date);
+        LocalDateTime endOfDay = getEndOfDay(date);
 
-        List<Attendance> attendances =
-            attendanceRepository.findAllByCreatedAtBetween(startOfDay, endOfDay);
-        List<Attendance> weekdays = attendances.stream()
-                                               .filter(a -> isWeekday(a))
-                                               .collect(Collectors.toList());
-        return makeAggregationDto(weekdays);
+        return attendanceRepository.findAllByCreatedAtBetween(startOfDay, endOfDay)
+                                   .filter(this::isWeekday) // Flux 내부에서 필터링
+                                   .collectList()           // Flux를 Mono<List>로 변환
+                                   .map(this::makeAggregationDto);
     }
 
-    public AggregationDto getAggregatedPeriodDataByDate(String start, String end) {
+    public Mono<AggregationDto> getAggregatedPeriodDataByDate(String start, String end) {
         LocalDateTime startOfDay = getStartOfDay(start);
         LocalDateTime endOfDay = getEndOfDay(end);
 
-        List<Attendance> attendances = attendanceRepository.findAllByCreatedAtBetween(startOfDay, endOfDay);
-        List<Attendance> weekdays = attendances.stream()
-                                               .filter(a -> isWeekday(a))
-                                               .collect(Collectors.toList());
-        AggregationDto result = makeAggregationDto(weekdays);
-        return result;
+        return attendanceRepository.findAllByCreatedAtBetween(startOfDay, endOfDay)
+                                   .filter(this::isWeekday)
+                                   .collectList()
+                                   .map(this::makeAggregationDto);
     }
 
-    public AggregationDto getAggregatedMonthlyDataByDate(String date) {
-
+    public Mono<AggregationDto> getAggregatedMonthlyDataByDate(String date) {
+        // date 형식이 "yyyy-MM"일 경우 처리
         LocalDateTime startOfMonth = getStartOfDay(date + "-01");
         LocalDateTime endOfMonth = getEndOfMonth(date);
 
-        List<Attendance> attendances = attendanceRepository.findAllByCreatedAtBetween(startOfMonth, endOfMonth);
-        List<Attendance> weekdays = attendances.stream()
-                                               .filter(a -> isWeekday(a))
-                                               .collect(Collectors.toList());
-        AggregationDto result = makeAggregationDto(weekdays);
-        return result;
+        return attendanceRepository.findAllByCreatedAtBetween(startOfMonth, endOfMonth)
+                                   .filter(this::isWeekday)
+                                   .collectList()
+                                   .map(this::makeAggregationDto);
     }
 
     private AggregationDto makeAggregationDto(List<Attendance> attendances) {
         AggregationDto result = new AggregationDto();
 
-        result.setMissingStart(attendances.stream().filter(v ->
-        {
-            boolean check = false;
-            if(v.getActualType().equals("연차")) return false;
-            if(v.getActualType().equals("보상종일")) return false;
-            check = v.getActualIn().isEmpty();
-            return check;
-        }).map(Attendance::getMemberName).toList());
-        result.setMissingEnd(attendances.stream().filter(v ->
-        {
-            boolean check = false;
-            if(v.getActualType().equals("연차")) return false;
-            if(v.getActualType().equals("보상종일")) return false;
-            check = v.getActualOut().isEmpty();
-            return check;
-        }).map(Attendance::getMemberName).toList());
-        result.setMissingPlan(List.of());
+        // 1. 출근 미기입자 (필터 로직 최적화)
+        result.setMissingStart(attendances.stream()
+                                          .filter(v -> !isExceptionType(v.getActualType()) && StringUtils.isBlank(v.getActualIn()))
+                                          .map(Attendance::getMemberName)
+                                          .toList());
+
+        // 2. 퇴근 미기입자
+        result.setMissingEnd(attendances.stream()
+                                        .filter(v -> !isExceptionType(v.getActualType()) && StringUtils.isBlank(v.getActualOut()))
+                                        .map(Attendance::getMemberName)
+                                        .toList());
+
+        result.setMissingPlan(Collections.emptyList());
         return result;
     }
 
+    // 예외 근무 타입 체크 (가독성 향상)
+    private boolean isExceptionType(String type) {
+        return "연차".equals(type) || "보상종일".equals(type);
+    }
+
     private LocalDateTime getStartOfDay(String dateStr) {
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-        LocalDate date = LocalDate.parse(dateStr, formatter);
-        return date.atStartOfDay(); // 00:00:00
+        return LocalDate.parse(dateStr).atStartOfDay();
     }
 
     private LocalDateTime getEndOfDay(String dateStr) {
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-        LocalDate date = LocalDate.parse(dateStr, formatter);
-        return date.atTime(23, 59, 59, 999_999_999); // 23:59:59.999999999
+        return LocalDate.parse(dateStr).atTime(LocalTime.MAX);
     }
 
     private LocalDateTime getEndOfMonth(String yearMonthStr) {
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM");
-        YearMonth yearMonth = YearMonth.parse(yearMonthStr, formatter);
-        return yearMonth.atEndOfMonth().atTime(23, 59, 59, 999_999_999);
+        YearMonth yearMonth = YearMonth.parse(yearMonthStr);
+        return yearMonth.atEndOfMonth().atTime(LocalTime.MAX);
     }
 
     private boolean isWeekday(Attendance attendance) {
-        // attendanceDt는 "yyyy-MM-dd" 형식이라고 가정
-        LocalDate date = LocalDate.parse(attendance.getAttendanceDt(), DateTimeFormatter.ISO_LOCAL_DATE);
+        LocalDate date = LocalDate.parse(attendance.getAttendanceDt());
         DayOfWeek dow = date.getDayOfWeek();
 
-        // 평일이면 true
-        if (dow != DayOfWeek.SATURDAY && dow != DayOfWeek.SUNDAY) {
-            return true;
-        }
-
-        // 주말인데 actualIn(출근 시간) 값이 있으면 true
-        String actualIn = attendance.getActualIn();
-        return actualIn != null && !actualIn.isBlank();
+        // 평일이거나, 주말인데 출근 기록이 있는 경우
+        return (dow != DayOfWeek.SATURDAY && dow != DayOfWeek.SUNDAY)
+            || StringUtils.isNotBlank(attendance.getActualIn());
     }
 }
